# wordle-clone

./: CMakeLists.txt  README.md  build.sh
.github/workflows/: ci.yml
components/include/: gameGrid.h  keyboard.h  notificationManager.h  roundedRectangle.h  settingsPanel.h
components/src/: gameGrid.c  keyboard.c  notificationManager.c  settingsPanel.c
data/: LICENSE.md
icons/include/: closePanelIcon.h  hardModeIcon.h  letterIcon.h  settingsIcon.h  themeIcon.h
icons/src/: closePanelIcon.c  hardModeIcon.c  letterIcon.c  settingsIcon.c  themeIcon.c
include/: cell.h  draw.h  gameState.h  gameplayUtils.h  globals.h  guessing.h  icon.h  inputProcessing.h  keyboard.h  notification.h  settings.h  theme.h  wordList.h
src/: cell.c  draw.c  gameState.c  gameplayUtils.c  guessing.c  icon.c  inputProcessing.c  keyboard.c  main.c  notification.c  settings.c  theme.c  wordList.c
state/include/: gameState.h  settingsState.h
state/src/: gameState.c  settingsState.c
